--- a/project/.env
+++ b/project/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 #DB_USERNAME=root
 #DB_PASSWORD=root
 
-DB_HOST=157.7.138.204
-DB_PORT=3100
+DB_HOST=mariadb
+DB_PORT=3306
 DB_DATABASE=company_kagaya
 DB_USERNAME=root
 DB_PASSWORD=e-sares2015!
